Fixed z-indexing.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,7 @@
 .title {
     font-size: 2.5em;
+    position: relative;
+    z-index: 3;
 }
 
 p {
@@ -20,6 +22,8 @@ p {
     height: 12em;
     float: right;
     vertical-align: top;
+    position: relative;
+    z-index: 3;
 }
 
 h2 {
@@ -36,6 +40,16 @@ h2 {
     margin-top: 2em;
 }
 
+.inner {
+    position: relative;
+    z-index: 3;
+}
+
+#footer {
+    position: relative;
+    z-index: 3;
+}
+
 #title1 {
     margin-bottom: 0 !important;
 }
@@ -44,8 +58,9 @@ h2 {
     margin-bottom: 3em !important;
 }
 
-#particles-js {
+#particles-js > canvas {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 0;
 }
